# publisher-content-api

./: .env  .env.dist  Cargo.toml  README.md  Rocket.toml  schema.graphql
src/: db.rs  graphql.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/graphql/: generator.rs  schema.rs
src/models/: articles.rs
src/routes/: graphql.rs
src/services/: articles.rs
