[package]
name = "graphql-api"
version = "0.1.0"
authors = ["Rafał Muszyński <rmuszynski1@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
juniper = "0.12"
juniper_rocket = "0.2.0"
dotenv = "0.9.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["diesel_postgres_pool"]
