[package]
name = "graphql-api"
version = "0.1.0"
authors = ["Rafał Muszyński <rafal.muszynski@sourcefabric.org>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
juniper = "0.12"
juniper_rocket = "0.3"
dotenv = "0.9.0"
chrono = "0.4.7"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
juniper-from-schema = "^0.3"
juniper-eager-loading = "^0.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool"]
