[package]
name = "publisher-graphql-api"
version = "0.1.0"
authors = ["Rafał Muszyński <rafal.muszynski@sourcefabric.org>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
juniper = "0.14"
juniper_rocket = "0.5"
dotenv = "0.9.0"
chrono = "0.4.7"
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.5"
juniper-from-schema = "^0.5"
juniper-eager-loading = "^0.4"
base64 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
